add search bar and option

--- a/src/assets/translation/fr/home.json
+++ b/src/assets/translation/fr/home.json
@@ -7,21 +7,160 @@
     "home.skills":[{
         "title": "Site Web et application mobile",
         "src": "progressiveApp",
-        "content": "Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus."
+        "content": "Développer et maintenir une application web ou mobile n'a jamais été aussi simple. React, la nouvelle technologie créée par Facebook me permet de développer plusieurs types d'application qui pourront être disponible sur le web, Apple Store ou encore google Play en fonction de vos besoins."
     },
     {
         "title": "Gestion de projet",
         "src": "progressTracking",
-        "content": "Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus."
+        "content": "La gestion de projets est une seconde nature pour moi après avoir expérimenté la méthode agile. Sprint, user stories, collaboration et ponctualité sont autant de notion que je maitrise grâce aux outils que j'utilise tels que Trello ou encore Github project management."
     },
     {
         "title": "Productivité",
         "src": "devProductivity",
-        "content": "Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus."
+        "content": "Développeur productif, je sais automatiser les tâches rébarbatives que moi où un autre développeur a été amené à faire. Un temps précieux que je gagne me permettant d'en apprendre davantage sur le monde de l'informatique."
     },{
         "title": "Travail d'équipe",
         "src": "peerProgramming",
-        "content": "Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus."
-    }]
+        "content": "La collaboration étant une qualité indispensable, j'ai eu l'occasion d'expérimenter le pair programming à plusieurs reprises à distance ou en présentiel. Slack, Discord et Zoom font partie de la collection d'application que j'utilise en tant que développeur."
+    }],
+    
+    "home.stack": [{
+        "name": "React.JS",
+        "tags": ["framework"],
+        "src": "react",
+        "color": "#00d8ff",
+        "percent": "100"
+    },
+    {
+        "name": "Ruby on Rails",
+        "tags": ["framework"],
+        "src": "ror",
+        "color": "#cc0000",
+        "percent": "100"
+    },
+    {
+        "name": "Bootstrap",
+        "tags": ["design"],
+        "src": "bootstrap",
+        "color": "#8b56d9",
+        "percent": "100"
+    },{
+        "name": "Ruby",
+        "tags": ["langage"],
+        "src": "ruby",
+        "color": "#cc0000",
+        "percent": "100"
+    },{
+        "name": "JavaScript",
+        "tags": ["langage"],
+        "src": "js",
+        "color": "#cc0000",
+        "percent": "100"
+    },{
+        "name": "Python",
+        "tags": ["langage"],
+        "src": "python",
+        "color": "#cc0000",
+        "percent": "25"
+    },{
+        "name": "HTML5",
+        "tags": ["langage"],
+        "src": "html",
+        "color": "#cc0000",
+        "percent": "100"
+    },{
+        "name": "CSS3",
+        "tags": ["langage","design"],
+        "src": "css",
+        "color": "#cc0000",
+        "percent": "100"
+    },{
+        "name": "C",
+        "tags": ["langage"],
+        "src": "c",
+        "color": "#cc0000",
+        "percent": "25"
+    },{
+        "name": "C++",
+        "tags": ["langage"],
+        "src": "cplus",
+        "color": "#cc0000",
+        "percent": "50"
+    },{
+        "name": "Bash",
+        "tags": ["langage"],
+        "src": "bash",
+        "color": "#cc0000",
+        "percent": "75"
+    },{
+        "name": "SQL",
+        "tags": ["langage"],
+        "src": "sql",
+        "color": "#cc0000",
+        "percent": "75"
+    },{
+        "name": "PostgreSQL",
+        "tags": ["database"],
+        "src": "postgresql",
+        "color": "#cc0000",
+        "percent": "100"
+    },{
+        "name": "Redis",
+        "tags": ["database","websocket"],
+        "src": "redis",
+        "color": "#cc0000",
+        "percent": "75"
+    },{
+        "name": "Github",
+        "tags": ["autre","versionning","SCRUM","deployment"],
+        "src": "github",
+        "color": "#cc0000",
+        "percent": "100"
+    },{
+        "name": "Heroku",
+        "tags": ["autre","deployment"],
+        "src": "heroku",
+        "color": "#cc0000",
+        "percent": "100"
+    },{
+        "name": "Amazon Web Services",
+        "tags": ["autre","deployment","development","test","stockage"],
+        "src": "aws",
+        "color": "#cc0000",
+        "percent": "75"
+    },{
+        "name": "Docker",
+        "tags": ["autre","conteneur","development"],
+        "src": "docker",
+        "color": "#cc0000",
+        "percent": "25"
+    },{
+        "name": "Stripe",
+        "tags": ["autre","paiement"],
+        "src": "stripe",
+        "color": "#cc0000",
+        "percent": "100"
+    },{
+        "name": "Ant Design",
+        "tags": ["autre","design"],
+        "src": "antd",
+        "color": "#cc0000",
+        "percent": "100"
+    },{
+        "name": "SEO",
+        "tags": ["autre","marketing digital"],
+        "src": "seo",
+        "color": "#cc0000",
+        "percent": "75"
+    },{
+        "name": "Redux",
+        "tags": ["autre","architecture"],
+        "src": "redux",
+        "color": "#cc0000",
+        "percent": "100"
+    }
+    ],
+    
+    "home.tags": ["framework","langage","design","database","autre"]
  
 }
